Added Github card in skills

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Using the datasets provided by NCRB, We were able to build a predictive ML model
 	
 	<tr>
 		<td><center><div class="square4"><center><img src='icons/js.png' class='logo' width='120px' height='120px' style='padding:10px;border-radius:25px;'/></center><br/><div class="square3"><center>Javascript</center></div></div></center></td>
-		<td></td>
+		<td><center><div class="square4"><center><img src='icons/git.jpg' class='logo' width='120px' height='120px' style='padding:10px;'/></center><br/><div class="square3"><center>GitHub</center></div></div></center></td>
 		<td></td>
 		</tr>
 	</table></center>
