--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class='grid'>
 	<div class='intro'>
 	<p style='font-size:40px'>Hi, I'm <span style="color:#F7EC09">Rakshith</span><br/> a Postgraduate Student</p>
-	<p>I'm interested in leaning and building Machine Learning and Image Processing projects</p>
+	<p>I'm interested in learning and building Machine Learning and Image Processing projects</p>
 	
 	<p>
 	<div class="square2"><a href='https://github.com/Rakshith102001'><img src='icons/git.jpg' width='25px' height='25px'/></a></div> &nbsp
